microservicemodules1/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  namespace: api-gateway
  labels:
    app: api-gateway
    tier: gateway
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
  - port: 6000
    targetPort: 6000
    protocol: TCP
    name: metrics
  selector:
    app: api-gateway
