microservicemodules1/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  namespace: api-gateway
  labels:
    app: api-gateway
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /1
        pathType: Prefix
        backend:
          service:
            name: api-gateway-service
            port:
              number: 5000
      - path: /2
        pathType: Prefix
        backend:
          service:
            name: api-gateway-service
            port:
              number: 5000
